add transitions to router

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'layout';
 @import 'fonts';
 @import 'utils';
+@import 'animations';
 @import 'components/form';
 @import 'components/button';
 @import 'components/header';
