--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,7 @@
+@import '~purecss/build/pure.css';
+@import '~prismjs/themes/prism.css';
+@import '~prismjs/plugins/show-language/prism-show-language.css';
+@import '~prismjs/plugins/line-numbers/prism-line-numbers.css';
 @import 'colors';
 @import 'variables';
 @import 'layout';
