--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -8,9 +8,9 @@
 @import 'components/form'
 @import 'components/header'
 @import 'components/hero'
+@import 'components/list'
 @import 'components/menu'
 @import 'components/note'
-@import 'components/rules'
 @import 'components/tabs'
 
 a.link
