--- a/src/stylus/components/note.styl
+++ b/src/stylus/components/note.styl
@@ -1,21 +1,19 @@
-.note:before
-    font-family: 'fontello'
-    content: '\e802'
-    position: absolute
-    margin-left: -23px
-
 .note
-    text-align: justify
-    color: #e0e0e0
-    border-radius: 5px
     background: $vue-hover
+    border-radius: 5px
+    color: $background-color
     padding: 20px 20px 20px 40px
+    text-align: justify
+    a
+        color: $vue-green
+    b
+        color: $vue-green
+    code
+        color: $vue-green
 
-.note b
-    color: $vue-green
-
-.note a
-    color: $vue-green
-
-.note code
-    color: $vue-green
+    &:before
+        content: '\f0eb'
+        font-family: FontAwesome
+        font-size: 22px
+        margin-left: -23px
+        position: absolute
