--- a/src/stylus/components/button.styl
+++ b/src/stylus/components/button.styl
@@ -1,13 +1,2 @@
-.button-success,
-.button-error,
-.button-warning,
-.button-secondary
-    color: white
-    border-radius: 4px
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
-
-.button-error
-    background: rgb(202, 60, 60)
-
-.pure-button-primary
+.button.is-primary
     background: $vue-green
