add stars and update inputs in the rules page

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -27,3 +27,10 @@ b.important
 
 .is-rtl
     direction: rtl
+
+.args
+    .args__title
+        color: $vue-green
+        font-weight: bold
+    ul
+        list-style: circle
