--- a/src/stylus/components/menu.styl
+++ b/src/stylus/components/menu.styl
@@ -1,5 +1,6 @@
 .menu
     padding-left: 20px
+    padding-top: 20px
     &.sidebar
         background-color: $background-color
         bottom: 0
@@ -13,7 +14,7 @@
 @media screen and (max-width: 900px)
     .menu
         &.sidebar
-            position: static
+            position: fixed
 
     .sidebar-button
         display: block
