extract side nav to its own component and replace note old references

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -22,8 +22,11 @@ b.important
 .rule
     margin: 20px 0
 
-.rule div
-    margin: 5px 0
+.rule
+    .description
+        margin: 5px 0
+    .args
+        margin: 5px 0    
 
 .is-rtl
     direction: rtl
