--- a/src/stylus/components/note.styl
+++ b/src/stylus/components/note.styl
@@ -2,6 +2,8 @@
     background: $vue-hover
     border-left: 5px solid $vue-green
     color: $background-color
+    margin-bottom: 10px
+    margin-top: 10px
     padding: 20px 20px 20px 40px
     text-align: justify
     a
