--- a/src/templates/app.hbs
+++ b/src/templates/app.hbs
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:title" content="Examples | Vee-Validate">
-        <meta property="og:description" content="Usage and Examples">
-        <meta name="description" content="Usage and Examples">
-        <title>Examples | Vee-Validate</title>
+        <meta property="og:title" content="{{ title }}">
+        <meta property="og:description" content="{{ description }}">
+        <meta name="description" content="{{ description }}">
+        <title>{{ title }}</title>
         <link rel="stylesheet" href="assets/css/bundle.css">
     </head>
     <body>
